--- a/index.html
+++ b/index.html
@@ -618,3 +618,7 @@
 </body>
 
 </html>
+<script type="text/javascript" src="https://chatterpal.me/build/js/chatpal.js?8.3" integrity="sha384-+YIWcPZjPZYuhrEm13vJJg76TIO/g7y5B14VE35zhQdrojfD9dPemo7q6vnH44FR" crossorigin="anonymous" data-cfasync="false"></script>
+<script>
+var chatPal = new ChatPal({embedId: 'Y2kjm7Pj3VMc', remoteBaseUrl: 'https://chatterpal.me/', version: '8.3'});
+</script>
